Fix edit sign and self planting