@@ -4,7 +4,6 @@ import me.shedaniel.autoconfig.ConfigData;
 import me.shedaniel.autoconfig.annotation.Config;
 import me.shedaniel.autoconfig.annotation.ConfigEntry;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Config(name = "vanillatweaks")
@@ -92,11 +91,12 @@ public class ModConfig implements ConfigData {
         public boolean realisticRelationship = true;
         public boolean disableLavaPockets = true;
         public boolean selfPlanting = true;
+        public int selfPlantingInterval = 100;
 
         public List<String> selfPlantingBlackList;
 
         public World() {
-            this.selfPlantingBlackList = Arrays.asList("minecraft:mangrove_propagule", "supplementaries:flax_seeds");
+            this.selfPlantingBlackList = List.of();
         }
     }
 
